# ScoreAPI

./: .pre-commit-config.yaml  pyproject.toml  server.py
config/: config.py
src/api/v1/: __init__.py
src/api/v1/music/: enums.py  exceptions.py
src/api/v1/music/controllers/: __init__.py  music.py
src/api/v1/music/schemas/: response.py
src/api/v1/music/services/: __init__.py  audiveris.py  homr.py  music.py  oemer.py
src/constants/: __init__.py  messages.py
src/core/: basic_auth.py
