[tool.poetry]
name = "ScoreAPI"
version = "0.1.0"
description = ""
authors = ["Ruturajsinh Rathod <ruturajsinh.rathod@mindinventory.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
asyncpg = "^0.30.0"
aiohttp = "^3.8.4"
pyjwt = "^2.6.0"
typer = { extras = ["all"], version = "^0.9.0" }
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
pytz = "^2025.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.28.1"
python-multipart = "^0.0.20"
dotenv = "^0.9.9"
music21 = "^9.7.1"
natsort = "^8.4.0"
pdf2image = "^1.17.0"
opencv-python = "^4.12.0.88"
homr = "^0.3.0"
oemer = "^0.1.8"
pyfluidsynth = "^1.3.4"
tqdm = "^4.67.1"
onnxruntime-gpu = "^1.22.0"
pymupdf = "^1.26.4"
